# wedding-photos

./: .env.example  .gitignore  Dockerfile  compose.yaml  guests.yaml  pyproject.toml  tables.yaml
docs/: architecture.md  design-system.md  guest-upload-proposal.md  implementation-proposal-photo-ux.md
scripts/: Matrimonio G&D - Invitati.csv  generate_fake_images.py  generate_guests_yaml.py  generate_qr_codes.py  generate_tables_yaml.py  seed_db.py  tables.csv  upload_table_photos.py
src/js/: table-app.js  wedding-app.js
src/templates/: base.html  denied.html  menu.html  table.html
src/templates/menu/: menu.html
src/templates/menu/partials/: gallery_tab.html  lightbox.html  snackbar.html  tab_bar.html  tables_tab.html  upload_dialog.html
src/wedding_photos/: __init__.py  config.py  database.py  db_models.py  main.py  middleware.py  models.py  repositories.py  storage.py  templates.py
src/wedding_photos/routes/: __init__.py  api.py  pages.py
src/wedding_photos/templates/: table.html
