[project]
name = "wedding-photos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Danilo Catone", email = "danilocatone@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "python-dotenv>=1.2.2",
    "pillow>=12.2.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.31.0",
    "minio>=7.2.20",
    "python-magic>=0.4.27",
    "qrcode>=8.0",
]

[project.scripts]
wedding-photos = "wedding_photos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas>=3.0.3",
    "ruff>=0.15.14",
]
